--- a/Winui3Sample/MainWindow.xaml
+++ b/Winui3Sample/MainWindow.xaml
@@ -8,7 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <SwapChainPanel
+        Loading="SwapChainPanel_Loading"
+        SizeChanged="SwapChainPanel_SizeChanged"
+        Loaded="SwapChainPanel_Loaded"/>
 </Window>
